--- a/main.html
+++ b/main.html
@@ -1,7 +1,52 @@
 <!DOCTYPE html>
 
 <html>
+<!DOCTYPE html>
 
+<html>
+
+<head>
+	<link rel="stylesheet" href="styles.css">
+
+    <style>
+        .holder{
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+        .item{
+            background-color: green;
+            height: 100px;
+            width: 100px;
+        }
+        #item-1{
+            background-color: red;
+            align-content: flex-end;
+        }
+        #item-2{
+            background-color: blue;
+        }
+    </style>
+</head>
+
+<body>
+	<!-- the entire body must be written by student -->
+
+    <div class="holder">
+        <div class="item" id="item-1">1</div>
+        <div class="item" id="item-2">2</div>
+        <div class="item" id="item-3">3</div>
+        <div class="item" id="item-4">4</div>
+        <div class="item" id="item-5">5</div>
+        <div class="item" id="item-6">6</div>
+        <div class="item" id="item-7">7</div>
+    </div>
+    <script type="text/javascript" src="./script.js">
+</script>
+
+</body>
+
+</html>
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
