--- a/main.html
+++ b/main.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 
 <html>
-<!DOCTYPE html>
-
-<html>
 
 <head>
 	<link rel="stylesheet" href="styles.css">
@@ -16,15 +13,16 @@
         }
         .item{
             background-color: green;
-            height: 100px;
-            width: 100px;
+            height: 200px;
+            width: 200px;
         }
         #item-1{
             background-color: red;
-            align-content: flex-end;
+            order: 3;
         }
         #item-2{
             background-color: blue;
+            order: 5;
         }
     </style>
 </head>
@@ -41,18 +39,6 @@
         <div class="item" id="item-6">6</div>
         <div class="item" id="item-7">7</div>
     </div>
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
-</html>
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
